# secure-messenger

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
nginx/: nginx.conf
src/secure_messenger/: init_db.py  main.py  models.py
src/secure_messenger/auth/: dependencies.py  router.py  schemas.py  service.py  totp_service.py
src/secure_messenger/core/: config.py  security.py
src/secure_messenger/db/: database.py  init_db.py  models.py  redis_client.py
src/secure_messenger/messages/: router.py  schemas.py  service.py
src/secure_messenger/static/css/: styles.css
src/secure_messenger/static/js/: app.js
src/secure_messenger/templates/: auth.html  base.html  inbox.html
tests/: conftest.py  test_auth_router.py  test_auth_service.py  test_security.py
